fixed contrast issue, downloaded svgs

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -11,7 +11,7 @@
     --secondary: #eeb24a;
     --secondaryLight: #f0ec17;
     --headerColor: #1a1a1a;
-    --bodyTextColor: #363636;
+    --bodyTextColor: #323130;
     --bodyTextColorWhite: #fdf5ea;
     /* 13px - 16px */
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
@@ -95,7 +95,7 @@
     /* prevents padding from adding to the width */
     box-sizing: border-box;
     padding: 0 calc(24 / 16 * 1rem);
-    color: var(--secondary);
+    color: var(--bodyTextColor);
     background-color: var(--primary);
     display: inline-block;
     position: relative;
